packages/typ/tests/fixtures/diagnostics/0823_polyvar_branch_result_mismatch_07.ml.expected
File "0823_polyvar_branch_result_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0823_polyvar_branch_result_mismatch_07 is not a valid module name.

File "0823_polyvar_branch_result_mismatch_07.ml", line 3, characters 21-22:
3 |   | `B (y : bool) -> y
                         ^
Error: The value y has type bool but an expression was expected of type int
